2008-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	reviewed by: <Carlos Garnacho <garnacho@gnome.org>

	* gtk/gtkbuilder.h:
	* gtk/gtkliststore.h:
	* gtk/gtkobject.h:
	* gtk/gtktextchild.h:
	* gtk/gtktreemodelfilter.h:
	* gtk/gtktreemodelsort.h:
	* gtk/gtktreestore.h:
	#include <gdkconfig.h> not <gdk/gdkconfig.h>

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* gtk/gtkaccelgroup.c: Fix warnings from calling
	g_object_notify() on a GtkAccelGroup without casting to a
	GObject.

2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcolorsel.c: Modernize and order things as most
	other objects. Defines at the top, class init before init
	before gobject methods before object method before widget
	methods. No changes to the logic done.

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* gtk/gtkaccelgroup.c: Don't call g_object_notify() with
	properties that don't exist. Also, make sure we notify for
	the "is-locked" property.

2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtklayout.c (enum): Remove left-over unused property enum.

	* gtk/gtk.symbols:
	* gtk/gtkscalebutton.c (gtk_scale_button_get_plus_button),
	(gtk_scale_button_get_minus_button):
	* gtk/gtkscalebutton.h:
	Add missing accessor for sealed fields GtkScaleButton->plus_button and
	minus_button.

2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkscalebutton.c: Fix gtk-doc syntax, add missing trailing colon.

	* gtk/gtk.symbols: Add all newly added accessors so abicheck.sh passes

	* gtk/gtkwidget.c (gtk_widget_get_allocation): Initialize the
	allocation to avoid compiler warnings

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkaccellabel.h
	* gtk/gtkactiongroup.h
	* gtk/gtkalignment.h
	* gtk/gtkarrow.h
	* gtk/gtkaspectframe.h
	* gtk/gtkbin.h
	* gtk/gtkhandlebox.h
	* gtk/gtkprogressbar.h
	* gtk/gtkrange.h
	* gtk/gtkscale.h
	* gtk/gtkscalebutton.h
	* gtk/gtkselection.h: fix some formatting and spacing uglyness
	that got merged from the GSEAL branch.
